<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/one"
    tools:context=".login">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/debate" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_233sdp"
        android:layout_height="@dimen/_127sdp"
        android:fontFamily="@font/poppins_regular"

        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_62sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/_241sdp"
        android:layout_height="@dimen/_50sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="331dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/emaill"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/passwordd"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/loginn"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/_118sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/need_an_account"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />


</androidx.constraintlayout.widget.ConstraintLayout>