<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/two"
    tools:context=".registration">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg"
        android:layout_width="151dp"
        android:layout_height="130dp"
        android:layout_marginEnd="128dp"
        android:src="@drawable/photocamera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/poppins_regular"

        android:gravity="center_vertical"
        android:text="@string/create_new"
        android:textColor="@color/white"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="393dp"
        android:layout_height="64dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/re_enter_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/emaill"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="237dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/passwordd"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="237dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/passwordd"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="Login!"
        android:textColor="@color/black"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="236dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="UserName"
        android:inputType="textPersonName"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />


</androidx.constraintlayout.widget.ConstraintLayout>